// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <p
    class="css-f09e0o-Paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders the component lg 1`] = `
<div>
  <p
    class="css-1m93k0s-Paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div>
  <p
    class="my-extra-class css-f09e0o-Paragraph"
  >
    Paragraph
  </p>
</div>
`;
